2011-05-25  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_FIND_JAVAH): Add 'fi' missed in merge.

2011-05-25  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_WITH_CORBA_SRC_ZIP): Add missing $.
	(IT_WITH_JAXP_SRC_ZIP): Likewise.
	(IT_WITH_JAXWS_SRC_ZIP): Likewise.
	(IT_WITH_JDK_SRC_ZIP): Likewise.
	(IT_WITH_LANGTOOLS_DROP_ZIP): Likewise.

2011-02-23  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_CHECK_WITH_CACAO_SRC_ZIP): Add missing $.
	(IT_CHECK_WITH_JAMVM_SRC_ZIP): Likewise.
	(IT_WITH_OPENJDK_SRC_ZIP): Likewise.
	(IT_WITH_HOTSPOT_SRC_ZIP): Likewise.
	(IT_WITH_JAXP_DROP_ZIP): Likewise.
	(IT_WITH_JAF_DROP_ZIP): Likewise.
	(IT_WITH_JAXWS_DROP_ZIP): Likewise.

2011-05-25  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_WITH_CORBA_SRC_ZIP): Invert
	AM_CONDITIONAL test to get correct behaviour.
	(IT_WITH_JAXP_SRC_ZIP): Likewise.
	(IT_WITH_JAXWS_SRC_ZIP): Likewise.
	(IT_WITH_JDK_SRC_ZIP): Likewise.
	(IT_WITH_LANGTOOLS_DROP_ZIP): Likewise.

2011-02-23  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_CHECK_WITH_CACAO_SRC_ZIP): Invert
	AM_CONDITIONAL test to get correct behaviour.
	(IT_CHECK_WITH_JAMVM_SRC_ZIP): Likewise.
	(IT_WITH_OPENJDK_SRC_ZIP): Likewise.
	(IT_WITH_HOTSPOT_SRC_ZIP): Likewise.
	(IT_WITH_JAXP_DROP_ZIP): Likewise.
	(IT_WITH_JAF_DROP_ZIP): Likewise.
	(IT_WITH_JAXWS_DROP_ZIP): Likewise.

2011-02-23  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_ENABLE_JAMVM): Renamed from IT_CHECK_ENABLE_JAMVM.
	(IT_WITH_JAMVM_SRC_ZIP): Renamed form IT_CHECK_WITH_JAMVM_SRC_ZIP.
	(IT_ENABLE_CACAO): Renamed from IT_CHECK_ENABLE_CACAO.
	(IT_WITH_CACAO_HOME): Renamed form IT_CHECK_WITH_CACAO_HOME.
	(IT_WITH_CACAO_SRC_ZIP): Renamed form IT_CHECK_WITH_CACAO_SRC_ZIP.
	(IT_WITH_CACAO_SRC_DIR): Renamed form IT_CHECK_WITH_CACAO_SRC_DIR.
	(IT_WITH_GCJ): Renamed from IT_CHECK_WITH_GCJ.
	(IT_WITH_HOTSPOT_BUILD): Renamed from IT_CHECK_WITH_HOTSPOT_BUILD.